<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Browser</string>
    <string name="choose_upload">Choose file for upload</string>
    <string name="uploads_disabled">File uploads are disabled.</string>
    <string name="new_tab">New tab</string>
    <string name="browser_tab_crash_snap">Oops, Snap !</string>
    <string name="browser_tab_crash_reload">Reload</string>
    <string name="browser_tab_crash_message">
        Something unexpected happened when displaying this webpage.
        Please reload or go to another page.
    </string>
    <string name="new_incognito_tab">Incognito mode</string>
    <string name="tab_most_visited">Most visited</string>
    <string name="tab_snapshots">Saved</string>
    <string name="added_to_bookmarks">Added to favorites.</string>
    <string name="removed_from_bookmarks">Removed from favorites.</string>
    <string name="sign_in_to">Sign in to <xliff:g id="hostname">%s1</xliff:g> \"<xliff:g id="realm">%s2</xliff:g>\"</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="action">Sign in</string>
    <string name="bookmarks_add_page">Save favorite</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="max_url_character_limit_msg">Max URL limit reached</string>
    <string name="msg_no_google_play">Sorry, Google Play store app does not exist.</string>
    <string name="page_info">Info</string>
    <string name="page_info_address">Address:</string>
    <string name="security_warning">Security warning</string>
    <string name="ssl_invalid">This certificate is invalid.</string>
    <string name="ssl_unknown">Unknown certificate error.</string>
    <string name="stopping">Stopping\u2026</string>
    <string name="stop">Stop</string>
    <string name="reload">Refresh</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="location">Address</string>
    <string name="account">Account</string>
    <string name="containing_folder">Add to</string>
    <string name="new_folder">New folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="no_subfolders">No subfolders.</string>
    <string name="add_to_homescreen_menu_option">Home screen</string>
    <string name="add_to_other_folder_menu_option">Select folder...</string>
    <string name="name">Label</string>
    <string name="http">http://</string>
    <string name="save_to_bookmarks">Save</string>
    <string name="bookmark_this_page">Add this page to favorites</string>
    <string name="remove">Remove</string>
    <string name="edit_bookmark">Edit</string>
    <string name="create_shortcut_bookmark">Add shortcut to home</string>
    <string name="remove_bookmark">Delete</string>
    <string name="remove_from_bookmarks">Remove</string>
    <string name="remove_history_item">Remove</string>
    <string name="set_as_homepage">Set as homepage</string>
    <string name="bookmark_saved">Added to favorites</string>
    <string name="bookmark_not_saved">Couldn\'t save favorite.</string>
    <string name="homepage_set">Homepage set.</string>
    <string name="bookmark_needs_title">"Favorite must have a name."</string>
    <string name="bookmark_needs_url">"Favorite must have a location."</string>
    <string name="bookmark_url_not_valid">This URL isn\'t valid.</string>
    <string name="bookmark_cannot_save_url">This URL can\'t be added to favorites.</string>
    <string name="current_page">from\u0020</string>
    <string name="delete_bookmark_warning">Delete favorite \"<xliff:g id="bookmark">%s</xliff:g>\"?</string>
    <string name="delete_folder_warning">Delete folder \"<xliff:g id="bookmark">%s</xliff:g>\"?</string>
    <string name="open_all_in_new_window">Open all in new tabs</string>
    <string name="sendText">Choose an action for text</string>
    <string name="close_other_tabs">Close other tabs</string>
    <string name="bookmarks">Favorites</string>
    <string name="shortcut_bookmark">Favorite</string>
    <string name="shortcut_bookmark_title">Choose a favorite</string>
    <string name="history">History</string>
    <string name="share_page">Share</string>
    <string name="add_to_homescreen">Add to homescreen</string>
    <string name="menu_save_snapshot">Save for offline reading</string>
    <string name="saving_snapshot">Saving\u2026</string>
    <string name="snapshot_failed">Couldn\'t save for offline reading.</string>
    <string name="contextheader_folder_bookmarkcount"><xliff:g id="bookmark_count">%d</xliff:g> favorites</string>
    <string name="contextheader_folder_empty">Empty folder</string>
    <string name="contextmenu_openlink">Open</string>
    <string name="contextmenu_openlink_newwindow">Open in new tab</string>
    <string name="contextmenu_openlink_newwindow_background">Open in new background tab</string>
    <string name="contextmenu_savelink">Save link</string>
    <string name="contextmenu_sharelink">Share link</string>
    <string name="contextmenu_copy">Copy</string>
    <string name="contextmenu_copylink">Copy link URL</string>
    <string name="contextmenu_download_image">Save image</string>
    <string name="contextmenu_view_image">View image</string>
    <string name="contextmenu_set_wallpaper">Set as wallpaper</string>
    <string name="contextmenu_dial_dot">Dial\u2026</string>
    <string name="contextmenu_add_contact">Add contact</string>
    <string name="contextmenu_send_mail">Send email</string>
    <string name="contextmenu_map">Map</string>
    <string name="choosertitle_sharevia">Share via</string>
    <string name="clear">Clear</string>
    <string name="replace">Replace</string>
    <string name="menu_preferences">Settings</string>
    <string name="pref_content_title">Content settings</string>
    <string name="pref_content_title_summary">Web content setting</string>
    <string name="pref_content_load_images">Load images</string>
    <string name="pref_content_load_images_summary">Display images on web pages</string>
    <string name="pref_security_allow_popups">Pop ups</string>
    <string name="pref_content_javascript">Enable JavaScript</string>
    <string name="pref_content_open_in_background">Open in background</string>
    <string name="pref_content_open_in_background_summary">Open new tabs behind the current tab</string>
    <string name="pref_content_homepage">Homepage</string>
    <string name="pref_content_search_engine">Search engine</string>
    <string name="pref_content_search_engine_summary">Choose a search engine</string>
    <string name="pref_set_homepage_to">Set to</string>
    <string-array name="pref_homepage_choices">
        
        <item>Current page</item>
        
        <item>Blank page</item>
        
        <item>Default page</item>
        
        <item>Most visited sites</item>
        
        <item>Other</item>
    </string-array>
    <string name="pref_general_title">General</string>
    <string name="pref_default_site_settings_title">Default Site Settings</string>
    <string name="pref_site_settings_title">Site Settings</string>
    <string name="pref_site_settings_info_panel">Security Information</string>
    <string name="pref_general_autofill_title">Auto-fill</string>
    <string name="pref_autofill_enabled">Form auto-fill</string>
    <string name="pref_autofill_enabled_summary">Fill out web forms with a single touch</string>
    <plurals name="pref_web_refiner_advertisements">
        <item quantity="one">%d advertisement</item>
        <item quantity="other">%d advertisements</item>
    </plurals>
    <plurals name="pref_web_refiner_trackers">
        <item quantity="one">%d tracker</item>
        <item quantity="other">%d trackers</item>
    </plurals>
    <plurals name="pref_web_refiner_malware">
        <item quantity="one">%d malware threat</item>
        <item quantity="other">%d malware threats</item>
    </plurals>
    <string-array name="pref_web_refiner_message">
        <item>"Blocked %s. "</item>
        <item>"Blocked %1$s and %2$s. "</item>
        <item>"Blocked %1$s, %2$s and %3$s. "</item>
    </string-array>
    <string name="pref_valid_cert"
        >Valid SSL certificate. Communication is encrypted and identity is verified.</string>
    <string name="pref_invalid_cert">Site has an invalid SSL certificate.</string>
    <string name="pref_warning_cert">Site SSL certificate has warnings.</string>
    <string name="pref_interface_title">Interface</string>
    <string name="pref_autofill_profile_editor">Auto-fill text</string>
    <string name="pref_autofill_profile_editor_summary">Set up text to auto-fill in web forms</string>
    <string name="autofill_profile_editor_heading">Type the text you want to auto-fill in web forms.</string>
    <string name="autofill_profile_editor_name">Full name:</string>
    <string name="autofill_profile_editor_email_address">Email:</string>
    <string name="autofill_profile_editor_company_name">Company name:</string>
    <string name="autofill_profile_editor_address_line_1">Address line 1:</string>
    <string name="autofill_profile_editor_address_line_1_hint">Street address, P.O. box, c/o</string>
    <string name="autofill_profile_editor_address_line_2">Address line 2:</string>
    <string name="autofill_profile_editor_address_line_2_hint">Apartment, suite, unit, building, floor, etc.</string>
    <string name="autofill_profile_editor_city">City/Town:</string>
    <string name="autofill_profile_editor_state">State/Province/Region:</string>
    <string name="autofill_profile_editor_zip_code">Zip code:</string>
    <string name="autofill_profile_editor_country">Country:</string>
    <string name="autofill_profile_editor_phone_number">Phone:</string>
    <string name="autofill_profile_editor_phone_number_invalid">Invalid phone number.</string>
    <string name="autofill_profile_editor_save_profile">Save</string>
    <string name="autofill_profile_successful_save">Auto-fill text saved.</string>
    <string name="autofill_profile_successful_delete">Auto-fill text deleted.</string>
    <string name="autofill_profile_editor_delete_profile">Delete</string>
    <string name="powersave_dialog_on">Enabled: Processor Core Control.\nDisabled: High Performance Features.\nPlease restart browser.</string>
    <string name="powersave_dialog_off">Power save mode disabled.\nPlease restart browser.</string>
    <string name="autofill_setup_dialog_message">The browser can automatically complete web forms like this one. Do you want to set up your auto-fill text?</string>
    <string name="pref_min_font_size">Minimum font size</string>
    <string name="pref_text_zoom">Text scaling</string>
    <string name="pref_force_userscalable">Force enable zoom</string>
    <string name="pref_force_userscalable_summary">Override a website\'s request to control zoom behavior</string>
    <string name="pref_font_size_category">Text size</string>
    <string name="preview">Preview</string>
    <string name="about">About</string>
    <string name="download_timeneeded">Time</string>
    <string name="download_filesize">Size</string>
    <string name="download_filepath_label">Path</string>
    <string name="download_edit_filename_label">Name</string>
    <string name="download_settings_title">Download settings</string>
    <string name="version">Version</string>
    <string name="build_date">Build Date</string>
    <string name="build_hash">Build Hash</string>
    <string name="user_agent">User Agent</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="swe_legal">Legal information</string>
    <string name="swe_pref_legal_info_summary">Copyright (c) 2015, The Linux Foundation. All rights reserved.</string>
</resources>